<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">开源版澳波钱包</string>
    <string name="title_create_wallet">创建钱包</string>
    <string name="title_import_wallet">导入钱包</string>
    <string name="wallet_chain_choose">请选择底层公链</string>
    <string name="wallet_chain">当前底层</string>
    <string name="next_btn">下一步</string>
    <string name="wait_come">敬请期待</string>
    <string name="recommend">推荐</string>
    <string name="copy">复制</string>
    <string name="back_up_private_key">备份私钥</string>
    <string name="back_up_now">立即备份</string>
    <string name="next_already_backup">我已备份</string>
    <string name="next_has_backup">立即备份</string>
    <string name="copy_to_clipboard">已复制到剪切板</string>
    <string name="album">相册</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="wallet_switch">钱包切换</string>
    <string name="delete_success">删除成功!</string>
    <string name="input_limit_5">1-5字符</string>
    <string name="save">保存</string>
    <string name="save_success_notice">保存成功！</string>
    <string name="save_failed_notice">保存失败</string>
    <string name="input_old_invalude">旧密码输入错误!</string>
    <string name="input_psw_not_same">两次输入的密码不一致!</string>
    <string name="input_password_wrong">密码输入错误!</string>

    <string name="title_mnemonic_import">助记词导入</string>
    <string name="title_private_key_import">私钥导入</string>
    <string name="title_key_store_import">Keystore导入</string>
    <string name="title_backup_notice">备份提示</string>
    <string name="title_backup_key">备份私钥</string>
    <string name="title_backup_mnemonic">备份助记词</string>
    <string name="title_verify_mnemonic">确认助记词</string>
    <string name="title_add_wallet">添加钱包</string>

    <string name="permission_request_dialog_title">权限申请</string>
    <string name="permission_request_dialog_positive">去设置</string>
    <string name="storage_permission_request_dialog_message">请在->【设置-应用-澳波钱包】权限中开启储存权限</string>
    <string name="camera_permission_request_dialog_message">请在->【设置-应用-澳波钱包】权限中开启相机权限</string>

    <string name="qr_code_scan_title">扫一扫</string>
    <string name="qr_code_scan_failed_tip">暂未识别出二维码</string>
    <string name="qr_code_scan_tip">将二维码放入框内，即可自动扫描</string>

    <string name="assets_all_assets">全部资产</string>

    <string name="wallet_type_pok">Polkadot</string>
    <string name="wallet_type_ksm">Kusama</string>
    <string name="wallet_type_klp">Kulupu</string>
    <string name="wallet_management">钱包管理</string>
    <string name="wallet_name_input_title">请设置钱包名称</string>
    <string name="wallet_name_input_hint">1-5个字符</string>
    <string name="wallet_password_input">请输入钱包密码</string>
    <string name="wallet_password_input_title">请设置钱包密码</string>
    <string name="wallet_password_input_hint">至少8位字符，包含大小字母和数字</string>
    <string name="wallet_password_input_wrong_tip">密码输入错误!</string>
    <string name="wallet_password_input_invalude_tip">请确认您的密码由大小写字母和数字组成且不小于8位</string>
    <string name="wallet_confirm_password_input_title">请确认钱包密码</string>
    <string name="wallet_confirm_password_input_hint">确认密码</string>
    <string name="wallet_notice_uppercase">一个大写字母</string>
    <string name="wallet_notice_lowercase">一个小写字母</string>
    <string name="wallet_notice_number">一个数字</string>
    <string name="wallet_notice_length">至少八位字符</string>
    <string name="wallet_name_empty_tip">请设置您的钱包名称</string>
    <string name="wallet_password_error_tip">请确认您的密码由大小写字母和数字组成且不小于8位</string>
    <string name="wallet_two_passwords_error_tip">两次输入的密码不一致!</string>
    <string name="wallet_get_mnemonic_error">获取助记词异常</string>
    <string name="wallet_has_exist_tip">钱包已存在，不需要导入</string>
    <string name="wallet_keystore_password_error_tip">密码与 Keystore 不匹配，请重新输入</string>
    <string name="wallet_create_failed_tip">创建钱包失败!</string>
    <string name="wallet_import_invalid_tip">私钥无效!</string>
    <string name="wallet_mnemonic_order_error_tip">您选择的助记词顺序不正确!</string>
    <string name="wallet_mnemonic_select_all_tip">请选择全部助记词!</string>
    <string name="wallet_mnemonic_generate_failed_tip">获取助记词失败!</string>
    <string name="wallet_mnemonic_input">输入助记词</string>
    <string name="wallet_mnemonic_input_comments">请输入12个钱包助记词（12个英文单词）按空格分离</string>
    <string name="wallet_mnemonic_empty_tip">请输入您的助记词</string>
    <string name="wallet_mnemonic_invalid_tip">助记词无效</string>
    <string name="wallet_mnemonic_not_enough_length_tip">请输入全部助记词</string>
    <string name="wallet_backup_notice_msg_1">获得私钥/助记词等于拥有钱包资产所有权</string>
    <string name="wallet_backup_notice_msg_2">备份私钥/助记词</string>
    <string name="wallet_backup_notice_msg_3">请勿截屏，注意周边是否有摄像头。</string>
    <string name="wallet_backup_notice_msg_4">将备份好的私钥妥善保存。</string>
    <string name="wallet_backup_notice_msg_5">使用纸和笔正确抄写助记词。</string>
    <string name="wallet_backup_notice_msg_6">如果您的手机丢失、被盗、损坏，私钥/助记词将可以恢复您的资产。</string>
    <string name="wallet_backup_notice_msg_7">离线保管</string>
    <string name="wallet_backup_notice_msg_8">妥善保管至隔离网络的安全地方。</string>
    <string name="wallet_backup_notice_msg_9">请勿以任何形式或方法将私钥/助记词透漏或公开。</string>
    <string name="wallet_backup_mnemonic_msg">请按次仔细抄写下方助记词。</string>
    <string name="wallet_backup_warn_dialog_title">免责声明</string>
    <string name="wallet_backup_warn_dialog_content">用户应当保管好备份的助记词或私钥，澳波钱包不承担任何因遗失损毁或其他方式导致对助记词或私钥失去控制造成的资产损失。</string>
    <string name="wallet_copy_private_key_tip">以下是钱包的私钥信息，复制并导出至安全的地方存放，一旦丢失钱包将无法恢复。</string>
    <string name="wallet_copy_key_store_tip">以下是钱包的 Keystore 信息，复制并导出至安全的地方存放，一旦丢失,钱包将无法恢复。</string>
    <string name="wallet_show_mnemonic_msg">请按次仔细抄写下方助记词，我们将在下一步验证。</string>
    <string name="wallet_verify_mnemonic_msg">请按次序选中您刚才写在纸上的助记词</string>
    <string name="wallet_import_type_mnemonic">助记词</string>
    <string name="wallet_import_type_private_key">私钥</string>
    <string name="wallet_import_type_keystore">Keystore</string>
    <string name="wallet_private_key_input">输入私钥</string>
    <string name="wallet_private_key_input_comments">请输入您的私钥或通过扫描二维码导入</string>
    <string name="wallet_private_key_empty_tip">请输入您的钱包私钥</string>
    <string name="wallet_key_store_input">输入 Keystore</string>
    <string name="wallet_key_store_input_comments">请输入您的Keystore</string>
    <string name="wallet_key_store_password_input">输入对应的密码</string>
    <string name="wallet_key_store_empty_tip">请输入您的钱包 Keystore</string>
    <string name="wallet_key_store_password_empty_tip">请输入对应的密码</string>
    <string name="wallet_list_empty">暂无钱包</string>
    <string name="wallet_feature_update_name">修改名称</string>
    <string name="wallet_feature_update_pwd">修改密码</string>
    <string name="wallet_feature_update_mnemonic">备份助记词</string>
    <string name="wallet_feature_private_key">备份私钥</string>
    <string name="wallet_feature_key_store">备份 Keystore</string>
    <string name="wallet_update_name">修改钱包名称</string>
    <string name="wallet_update_password">修改密码</string>
    <string name="wallet_old_password_input_title">旧的钱包密码</string>
    <string name="wallet_old_password_input_hint">输入旧的钱包密码</string>
    <string name="wallet_new_password_input_title">新的钱包密码</string>
    <string name="wallet_new_password_input_hint">至少8位字符，包含大小字母和数字</string>
    <string name="wallet_confirm_new_password_input_title">确认新的钱包密码</string>
    <string name="wallet_confirm_new_password_input_hint">再次输入新的钱包密码</string>
    <string name="wallet_old_password_empty_tip">请输入旧密码</string>
    <string name="wallet_new_password_empty_tip">请输入新密码</string>
    <string name="wallet_confirm_new_password_empty_tip">请确认新密码</string>
    <string name="coin_transfer">转账</string>
    <string name="coin_receive">收款</string>
    <string name="transfer_title">转账</string>
    <string name="balance_text">余额：</string>
    <string name="transfer_tab2_hints">请输入数量</string>
    <string name="transfer_tab3">接收地址</string>
    <string name="transfer_tab3_hints">请输入接收地址</string>
    <string name="transfer_fee">矿工费</string>
    <string name="input_amount">请输入金额</string>
    <string name="input_format_error_msg">您输入的格式有误！</string>
    <string name="transfer_amount_need_over_zero">数量需大于0</string>
    <string name="input_address_same">转账地址和收款地址不能相同!</string>
    <string name="input_balance_low">余额不足</string>
    <string name="polka_unactivate_notice">接收地址未激活，转账数量须大于</string>
    <string name="polka_transfer_risk_tips_text">您的转账操作一旦完成，转账的对应资产将由您变更为接收地址所对应的账户所有人享有，且钱包余额低于%1$s时会导致该钱包余额被主网收取，请您务必在执行转账前，确保转账属于自愿行为，仔细核对接收地址及钱包余额，避免造成不必要的财产损失。</string>
    <string name="transfer_address_error">地址无效</string>
    <string name="transfer_ensure">确认</string>
    <string name="transfer_risk_tip">风险提示</string>
    <string name="confirm_transfer">确认交易</string>
    <string name="broadcast_fail">广播失败</string>
    <string name="doing">处理中</string>
    <string name="button_confirm_ok">我已确认</string>
    <string name="transfer_amount_text">转账金额</string>
    <string name="transfer_success">转账成功</string>
    <string name="transfer_failed">转账失败</string>
    <string name="send_address">发送地址</string>
    <string name="receive_address">接收地址</string>
    <string name="transfer_id">交易ID</string>
    <string name="transfer_block">区块</string>
    <string name="transfer_time">交易时间</string>
    <string name="show_more_details">详细数据</string>
    <string name="title_transfer_details">交易详情</string>

</resources>