<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/root_layout"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_topbar" />

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_below="@+id/topbar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp">

        <!--旧密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FormInputTitle"
                android:text="@string/wallet_old_password_input_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/old_password_et"
                style="@style/FormInput"
                android:layout_width="match_parent"
                android:hint="@string/wallet_old_password_input_hint"
                android:inputType="textPassword" />

        </LinearLayout>


        <!--新密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FormInputTitle"
                android:text="@string/wallet_new_password_input_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/new_password_et"
                style="@style/FormInput"
                android:layout_width="match_parent"
                android:hint="@string/wallet_new_password_input_hint"
                android:inputType="textPassword" />

        </LinearLayout>

        <include layout="@layout/include_input_notice_layout" />


        <!--确认新密码密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FormInputTitle"
                android:text="@string/wallet_confirm_new_password_input_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/confirm_new_password_et"
                style="@style/FormInput"
                android:layout_width="match_parent"
                android:hint="@string/wallet_confirm_new_password_input_hint"
                android:inputType="textPassword" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/keyboard_place_layout"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>