<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_topbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/primary_btn_layout"
        android:layout_below="@+id/topbar_layout"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="17dp"
            android:paddingTop="20dp"
            android:paddingEnd="17dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallet_backup_notice_msg_1"
                android:textColor="@color/color_text_white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/wallet_backup_notice_msg_2"
                android:textColor="@color/color_text_white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/oval_icon_bg"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="#000"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_backup_notice_msg_3"
                    android:textColor="@color/color_text_white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/oval_icon_bg"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="#000"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_backup_notice_msg_4"
                    android:textColor="@color/color_text_white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/oval_icon_bg"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="#000"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_backup_notice_msg_5"
                    android:textColor="@color/color_text_white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/oval_icon_bg"
                    android:gravity="center"
                    android:text="4"
                    android:textColor="#000"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_backup_notice_msg_6"
                    android:textColor="@color/color_text_white"
                    android:textSize="14sp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="81dp"
                android:text="@string/wallet_backup_notice_msg_7"
                android:textColor="@color/color_text_white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/oval_icon_bg"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="#000"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_backup_notice_msg_8"
                    android:textColor="@color/color_text_white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/oval_icon_bg"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="#000"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_backup_notice_msg_9"
                    android:textColor="@color/color_text_white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/primary_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_above="@+id/secondary_btn">

        <include
            layout="@layout/include_primary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <com.noober.background.view.BLTextView
            android:layout_width="47dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="107dp"
            android:gravity="center"
            android:text="@string/recommend"
            android:textColor="#8B572A"
            app:bl_corners_radius="4dp"
            app:bl_solid_color="#F8E71C" />

    </RelativeLayout>

    <include
        layout="@layout/include_secondary_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="59dp" />

</RelativeLayout>