<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title_bar"
        layout="@layout/include_topbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.noober.background.view.BLLinearLayout
                android:id="@+id/blll_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:paddingTop="49dp"
                android:paddingBottom="69dp"
                app:bl_corners_radius="8dp"
                app:bl_gradient_endColor="#1A1B25"
                app:bl_gradient_startColor="#1A1B25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/transfer_amount_text"
                    android:textColor="#14D2B8"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:includeFontPadding="false"
                        android:textColor="@color/color_text_white"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:text="100" />

                    <TextView
                        android:id="@+id/tv_coin_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/color_text_white"
                        android:textSize="12sp"
                        tools:text="TRX" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/line_imaginary_divide" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:text="@string/send_address"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_send_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/color_text_white"
                    android:textSize="14sp"
                    tools:text="LoremipsumdolsSFCZechtamDetDASC" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/line_imaginary_divide" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:text="@string/receive_address"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_receive_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/color_text_white"
                    android:textSize="14sp"
                    tools:text="LoremipsumdolsSFCZechtamDetDASC" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/line_imaginary_divide" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:text="@string/transfer_fee"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:textColor="@color/color_text_white"
                    android:textSize="14sp"
                    tools:text="≈300带宽" />

            </com.noober.background.view.BLLinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blll_info"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/transfer_fee"
                android:textColor="#F84F73"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="34dp"
                android:background="@drawable/bg_submit"
                android:gravity="center"
                android:text="@string/button_confirm_ok"
                android:textColor="@color/color_text_white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>